@@ -5,7 +5,7 @@
  *                            | (__| |_| |  _ <| |___
  *                             \___|\___/|_| \_\_____|
  *
- * $Id: lib500.c,v 1.7 2008-05-22 21:49:52 danf Exp $
+ * $Id: lib500.c,v 1.8 2008-06-06 17:33:36 bagder Exp $
  */
 
 #include "test.h"
@@ -14,6 +14,7 @@ int test(char *URL)
 {
   CURLcode res;
   CURL *curl;
+  char *ipstr=NULL;
 
   if (curl_global_init(CURL_GLOBAL_ALL) != CURLE_OK) {
     fprintf(stderr, "curl_global_init() failed\n");
@@ -31,7 +32,17 @@ int test(char *URL)
 
   res = curl_easy_perform(curl);
 
-  curl_easy_cleanup(curl);  
+  if(!res) {
+    FILE *moo;
+    res = curl_easy_getinfo(curl, CURLINFO_PRIMARY_IP, &ipstr);
+    moo = fopen(libtest_arg2, "wb");
+    if(moo) {
+      fprintf(moo, "IP: %s\n", ipstr);
+      fclose(moo);
+    }
+  }
+
+  curl_easy_cleanup(curl);
   curl_global_cleanup();
 
   return (int)res;
